--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "antd": "^4.23.0",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-alert-dialog": "^1.0.0",
+    "@radix-ui/react-switch": "^1.0.0",
+    "@stitches/react": "^1.2.8",
     "next": "12.2.5",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.35.0",
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
     "@types/node": "18.7.15",
