--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-separator": "^1.0.0",
     "@radix-ui/react-switch": "^1.0.0",
     "@stitches/react": "^1.2.8",
+    "axios": "^1.1.3",
     "next": "12.2.5",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
